--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,3 +63,43 @@
     font-family: 'Montserrat', sans-serif;
     /* font-family: 'Sora', sans-serif; */
 }
+
+.custom-styles {
+    --ReactInputVerificationCode-itemWidth: 3rem;
+    --ReactInputVerificationCode-itemHeight: 3.5rem;
+}
+
+@media only screen and (max-width: 768px) {
+    .custom-styles {
+        --ReactInputVerificationCode-itemWidth: 11vw;
+        --ReactInputVerificationCode-itemHeight: 3.5rem;
+    }
+}
+
+
+/* .custom-styles .ReactInputVerificationCode__item {
+    position: relative;
+    color: #262626;
+    font-weight: 500;
+}
+
+.custom-styles .ReactInputVerificationCode__item,
+.custom-styles .ReactInputVerificationCode__item.is-active {
+    box-shadow: none;
+}
+
+.custom-styles .ReactInputVerificationCode__item:after {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 2px;
+    background-color: #ebebeb;
+    transition: background-color 0.2s ease-out;
+}
+
+.custom-styles .ReactInputVerificationCode__item.is-active:after {
+    background-color: rgb(38, 189, 38);
+} */
